<resources>
    <string name="app_name">Web Social</string>
    <string name="dont_have_account">Don\'t have account? Sign up</string>
    <string name="email_usernumber">Email/Usernumber</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="welcome_text">Praesent tellus mauris, tincidunt nec ipsum id, faucibus pellentesque leo. Nunc congue ac tellus quis porttitor.</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Signup</string>
    <string name="get_start">Get Start</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in1">Sign in</string>

    <string name="signup_text"><![CDATA[Already remember?\t\t<font color=#504DE5>Sign in</font>]]></string>
    <string name="signin_text"><![CDATA[Need an account?\t\t<font color=#504DE5>Sign up</font>]]></string>
    <string name="forget_pass"><![CDATA[Forgot your password?\t\t<font color=#504DE5>Retrive</font>]]></string>

    <string name="internet_error_text">You don\'t seem to be connected to the internent. Please check yout connection and try again.</string>
    <string name="intent_healine">No internet connection</string>

    <string name="try_again">Try again</string>
    <string name="server_error_messae">Thanks for noticing we\'re going to fix it up and have things back to normal soon.</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="phone_verify_text">Tap Next to verify your account with your phone number. You don\'t need to manualy enter verification code if the number install in this phone</string>
    <string name="txt_continue">Continue</string>
    <string name="i_didn_t_get_a_code">I didn\'t get a code</string>
    <string name="tap_continue_text">Tap Continue to accept our Terms,Data Policy, cookie use and the Privacy Policy and Terms of Service</string>
    <string name="enter_the_code">Enter the code that was send to</string>
    <string name="congratulations_text">Congratulation your number is verified click Continue to create your profile</string>
</resources>
